src/test/resources/fail/basic/Problem4.scala
package fail.basic

import forcedtodo.todo

class Problem4 {
  @todo("Value", until = "1990-08-04")
  val x = 5
}
